<?xml version="1.0"?>
<package format="2">
  <name>kortex_hardware</name>
  <version>0.0.1</version>
  <description>The kortex_hardware package</description>

  <maintainer email="rm773@cornell.edu">Rishabh Madan</maintainer>

  <license>BSD-2</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pinocchio</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
